2085 [OneClick] fixed long delay during processing when adding more than 4 tracks (part III)
2084 [AVS Script Creator] resize value will only be added to the script if necessary
                          fixed button checked states after loading avisynth profiles
2083 [OneClick] fixed long delay during processing when adding more than 4 tracks (part II)
2082 [Audio Encoder] DTS-MA decoding is blocked with NicAudio to avoid problems
2081 [OneClick] fixed long delay during processing when adding more than 4 tracks
2080 [AVS] if an AVS script cannot be opened the old method to open such files is used during the session. 
           the option can be completly disabled in the settings ("Improved AVS opening", enabled by default). Bug #3437874
2079 [MKV Demuxer] adjusted demuxer to the recent mkvextract changes (requires mkvmerge revision 5.2.1+)
2078 [Progress Window] changed priority will be kept during the whole application session. Feature request #3445179
2077 [Progress Window] lower also I/O and memory priority when priority below normal (requires Windows Vista or newer). Feature request #3468249
2076 [Video Player] fixed a crash when using non seekable scripts
                    in order to display such scripts the default start position is now the beginning 
2075 [AVS Script Creator] improve input DAR detection when using no index files
2074 [AVS Script Creator] + [OneClick] improve input DAR detection when using index files
2073 [Settings] added option to select if ITU Aspect Ratio should be used by default (enabled by default). Feature request #3057378
2072 [Audio Encoder] added handling of channel count mismatch
2071 [MediaInfo] added default/forced track info to the MediaInfo wrapper (requires mediainfo revision 0.7.51+)
2070 [MKV Muxer] adjusted muxer to the recent mkvmerge changes (requires mkvmerge revision 5.2.0+)
2069 [HD Streams Extractor] automatically execute the job a second time if a gaps file is detected
2068 [x264] fixed "--range pc"