@@ -1,3 +1,4 @@
+2086 [AVS Script Creator] improve input DAR detection when using AVS input files
 2085 [OneClick] fixed long delay during processing when adding more than 4 tracks (part III)
 2084 [AVS Script Creator] resize value will only be added to the script if necessary
                           fixed button checked states after loading avisynth profiles
